--- a/package.json
+++ b/package.json
@@ -1,45 +1,38 @@
 {
-  "name": "b7a10-chef-recipe-hunter-client-side-eshansaif",
+  "name": "recipe_app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.6.1",
-    "@emotion/react": "^11.10.8",
-    "@emotion/styled": "^11.10.8",
-    "@react-pdf/renderer": "^3.1.9",
-    "aos": "^3.0.0-beta.6",
-    "daisyui": "^2.51.6",
-    "firebase": "^9.21.0",
-    "framer-motion": "^10.12.8",
-    "localforage": "^1.10.0",
-    "lottie-react": "^2.4.0",
-    "match-sorter": "^6.3.1",
+    "axios": "^1.7.2",
+    "firebase": "^10.12.0",
+    "json-server": "^1.0.0-beta.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
-    "react-rating": "^2.0.5",
-    "react-router-dom": "^6.11.0",
-    "sort-by": "^1.2.0",
-    "sweetalert": "^2.1.2"
+    "react-firebase-hooks": "^5.1.1",
+    "react-router-dom": "^6.23.1",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.11.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^4.0.0",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.38.0",
-    "eslint-plugin-react": "^7.32.2",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
+    "daisyui": "^4.11.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "postcss": "^8.4.23",
-    "tailwindcss": "^3.3.2",
-    "vite": "^4.3.2"
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "vite": "^5.2.0"
   }
 }
