--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "firebase": "^10.12.0",
     "json-server": "^1.0.0-beta.0",
     "react": "^18.2.0",
